# Stretch

./: Cargo.toml  LICENSE  README.md
art_source/: test_scene_1.hiplc
art_source/IdeaProjects/Stretch/default_assets/scenes/: test_scene_1.gltf
art_source/backup/: test_scene_1_bak1.hiplc  test_scene_1_bak2.hiplc
config/: local_dev_config.json
default_assets/materials/: unlit.json
default_assets/scenes/: test_scene_1.gltf
default_assets/shaders/: unlit.frag.glsl
src/: config.rs  lib.rs  main.rs
src/assets/: asset_manifest.rs  asset_ref.rs  mod.rs
src/assets/materials/: mod.rs
src/assets/shaders/: mod.rs
src/renderer/: color.rs  mod.rs  web_renderer.rs
src/sim/: mod.rs  world_data_store.rs
src/sim/local_disk_data_store/: mod.rs
tests/: asset_ref_tests.rs  color_tests.rs
