[package]
name = "stretch"
version = "0.1.0"
authors = ["Mortoc <Mortoc@protonmail.com>"]
edition = "2018"

[dependencies]
image = "0.23"
winit = "0.22"
shaderc = "0.6"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
futures-signals = "0.3.15"
legion = "0.3.1"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"